# rust_android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wan7451/android/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
mediator-ffi/: build.gradle.kts
mediator-ffi/src/main/java/com/wan7451/ffi/: BridgeFFi.kt  FfiNative.kt  Handler.kt  Log.kt
mediator-ffi/src/main/java/com/wan7451/native/: FFICenter.kt
megazord/: Cargo.toml  README.md
megazord/src/: ffi.rs  lib.rs
megazord/src/module/log/: logs.rs
megazord/src/module/net/: common.rs  https.rs  mod.rs  response.rs
megazord/src/module/task/: chain.rs  task.rs
native/: build.gradle.kts
native/src/main/java/com/wan7451/native/: FFICenter.kt
rust_library/: Cargo.toml
rust_library/src/: ffi.rs  lib.rs
rust_library/src/module/: mod.rs
rust_library/src/module/error/: error.rs
rust_library/src/module/log/: logs.rs  mod.rs
rust_library/src/module/net/: common.rs  https.rs  mod.rs
rust_library/src/module/task/: mod.rs  task.rs
