[package]
name = "megazord"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # jni库需要 导出为动态库

[profile.release]
lto = true  # 优化编译输出

[dependencies]
jni = "0.21.1"#jni 依赖


#reqwest = "0.12.2" # http请求库
#tokio = "1.36.0" # 异步库
reqwest = { version = "0.12.3", features = [
    "json",
    "multipart",
    "cookies",
    "native-tls-vendored",
    "gzip",
] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] } # json 序列化库
dashmap = "5.5.3" # 线程安全的map
once_cell = "1.19.0" # 单例

#[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
log = "0.4.20" # android 日志库

async-trait = "0.1.79" # 异步trait
futures = "0.3" # 异步库
futures-core = "0.3" # 异步库
futures-util = "0.3" # 异步库