#[package]
#name = "rust_library"
#version = "0.1.0"
#edition = "2021"
#
#[lib]
#crate-type = ["cdylib"]
#
#[dependencies]
#jni = "0.21.1"
#log = "0.4.20"
#android_logger = "0.13"
#
#anyhow = "1"
#
#tokio = { version = "1", features = ["full"]}
#
#serde_json = "1.0.115"
#hyper = "1.2.0"
#


[package]
name = "rust_library"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # jni库需要 导出为动态库

[profile.release]
lto = true  # 优化编译输出

[dependencies]
jni = "0.21.1"#jni 依赖


#reqwest = "0.12.2" # http请求库
#tokio = "1.36.0" # 异步库
reqwest = { version = "0.12", features = ["json"], default-features = false  }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] } # json 序列化库
dashmap = "5.5.3" # 线程安全的map
once_cell = "1.19.0" # 单例
